[tool.poetry]
name = "modeltools"
version = "0.2.1"
description = ""
authors = ["Fico Aguiar <fico.aguiar@bitingbit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '--doctest-modules'